クリアボタン追加

--- a/src/Pages.css
+++ b/src/Pages.css
@@ -69,7 +69,7 @@
       }
     }
   }
-  .search-button {
+  .open-search {
     width: 124px;
     height: 60px;
     padding-left: 10px;
@@ -133,9 +133,10 @@
         }
       }
     }
-    .activity {
+    .activity, .others {
       height: 60px;
-
+    }
+    .activity {
       .icon-wrapper {
         width: 18px;
         height: 18px;
@@ -165,6 +166,36 @@
         }
         &.to {
           right: 10.5px;
+        }
+      }
+    }
+    .others {
+      .clear {
+        width: 206.5px;
+        height: 60px;
+
+        button {
+          height: 30px;
+          background-color: #2a2a31;
+        }
+        .icon-wrapper {
+          width: 18px;
+          height: 18px;
+        }
+        .icon {
+          width: 12px;
+          height: 12px;
+        }
+      }
+      .search-button {
+        width: 188px;
+        height: 60px;
+        padding-right: 5px;
+        background-color: #cc2944;
+
+        .icon {
+          width: 32px;
+          height: 32px;
         }
       }
     }
