--- a/src/index.css
+++ b/src/index.css
@@ -111,6 +111,9 @@ code {
   text-align: center;
 }
 
+.rounded-6 {
+  border-radius: 6px;
+}
 /* TODO: 置き換え */
 .rounded-8 {
   border-radius: 8px;
