--- a/src/Card.css
+++ b/src/Card.css
@@ -149,6 +149,11 @@
   .activity-goal, .activity-recruit {
     height: 25.5px;
     line-height: 25.5px;
+
+    .icon-wrapper {
+      width: 18px;
+      height: 18px;
+    }
   }
 }
 
