--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,9 @@ code {
 .bg-primary {
   background-color: var(--color-primary);
 }
+.bg-green {
+  background-color: var(--color-green);
+}
 /* TODO: 置き換え */
 .bg-yellow {
 
