--- a/src/Page.css
+++ b/src/Page.css
@@ -3,6 +3,9 @@
  */
 .page {
   .nav-bar {
+    position: sticky;
+    top: 0;
+    z-index: 3;
     height: 81px;
     padding-right: 22px;
     color: #fff;
