自由記入のアイコンの色を変更

--- a/src/Card.css
+++ b/src/Card.css
@@ -235,6 +235,11 @@
       border: 2px solid #313138;
       border-radius: 50%;
       background: #313138;
+
+      &.bg-primary {
+        background-color: var(--color-primary);
+        border-color: var(--color-primary);
+      }
     }
   }
 }
