--- a/src/NewPage.css
+++ b/src/NewPage.css
@@ -10,6 +10,11 @@
     padding-right: 22px;
     color: #fff;
   }
+
+  .detail {
+    width: 1080px;
+    padding-left: 134px;
+  }
 }
 
 .new-page {
@@ -26,6 +31,19 @@
     margin-bottom: 22px;
     font-size: 22px;
     line-height: 33px;
+  }
+}
+
+/**
+ * detail
+ */
+.detail {
+  .info {
+    margin-bottom: 20px;
+    font-size: 34px;
+  }
+  .time {
+
   }
 }
 }
